Hyprlock hat bearbeitet

--- a/qt5ct/qt5ct.conf
+++ b/qt5ct/qt5ct.conf
@@ -1,5 +1,5 @@
 [General]
-animations_enabled=false
+animations_enabled=true
 
 [Appearance]
 color_scheme_path=/home/jative/.config/qt5ct/colors/catppuccin-mocha.conf
