--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -4,7 +4,7 @@
 # OR EDIT THIS ONE ACCORDING TO THE WIKI INSTRUCTIONS.
 # #######################################################################################
 
-# HYPRLAND ECO CONFIG - POWER SAVING MODE
+# HYPRLAND PERFORMANCE CONFIG - HIGH PERFORMANCE MODE
 
 # This is an example Hyprland config file.
 # Refer to the wiki for more information.
@@ -22,37 +22,75 @@ source = ~/.config/hypr/hyprland.common.conf
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=eDP-1,1280x800,auto,1
+monitor=eDP-1,1920x1200,auto,1.5
 monitor =,preferred,auto,auto,mirror,eDP-1
 
-# ECO-specific decoration settings
+# Performance-specific decoration settings
 decoration {
-    active_opacity = 1.0
-    inactive_opacity = 1.0
+    active_opacity = 0.94
+    inactive_opacity = 0.85
+
     shadow {
-        enabled = false
+        enabled = true
+        range = 20
+        render_power = 3
+        color = rgba(000000aa)
     }
+
     blur {
-        enabled = false
+        enabled = true
+        size = 8
+        passes = 2
+        new_optimizations = on
+        ignore_opacity = false
+        vibrancy = 0.25
+        noise = 0.01
     }
 }
 
-# ECO-specific animations (disabled)
+# Performance-specific animations (enabled with effects)
 animations {
-    enabled = no
+  enabled = yes
+
+  bezier = myBezier, 0.05, 0.9, 0.1, 1.05
+  bezier = linear, 0.0, 0.0, 1.0, 1.0
+  bezier = wind, 0.05, 0.9, 0.1, 1.05
+  bezier = winIn, 0.1, 1.1, 0.1, 1.1
+  bezier = winOut, 0.3, -0.3, 0, 1
+  bezier = slow, 0, 0.85, 0.3, 1
+  bezier = overshot, 0.7, 0.6, 0.1, 1.1
+  bezier = bounce, 1.1, 1.6, 0.1, 0.85
+  bezier = sligshot, 1, -1, 0.15, 1.25
+  bezier = nice, 0, 6.9, 0.5, -4.20
+  
+  animation = windowsIn, 1, 5, slow, popin
+  animation = windowsOut, 1, 5, winOut, popin
+  animation = windowsMove, 1, 5, wind, slide
+  animation = border, 1, 10, linear
+  animation = borderangle, 1, 180, linear, loop #used by rainbow borders and rotating colors
+  animation = fade, 1, 5, overshot
+  animation = workspaces, 1, 5, wind
+  animation = windows, 1, 5, bounce, popin
 }
 
-# ECO-specific dwindle settings
+# Performance-specific dwindle settings
 dwindle {
-    pseudotile = false # Master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
+    pseudotile = true # Master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
 }
 
-# ECO-specific misc settings
+# Performance-specific misc settings
 misc {
-    vrr = 0
+    vrr = 2
 }
 
-# ECO-specific gestures (minimal)
+# Performance-specific gestures (full functionality)
 gestures {
-  workspace_swipe = false
+  workspace_swipe = true
+  workspace_swipe_fingers = 3
+  workspace_swipe_distance = 500
+  workspace_swipe_invert = true
+  workspace_swipe_min_speed_to_force = 30
+  workspace_swipe_cancel_ratio = 0.5
+  workspace_swipe_create_new = true 
+  workspace_swipe_forever = true
 }
