--- a/hypr/hyprland.common.conf
+++ b/hypr/hyprland.common.conf
@@ -211,6 +211,7 @@ bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = CTRL ALT, Delete, exec, ~/.config/hypr/waybar/scripts/power-menu.sh
 bind = $mainMod, L, exec, hyprlock & ~/.config/hypr/scripts/set-en-layout.sh
+bind = $mainMod, O, exec, ~/.config/hypr/scripts/rotate-screen.sh
 bind = $mainMod, B, exec, $browser
 bind = $mainMod, PRINT, exec, hyprshot -m region output --clipboard-only --freeze
 bind = $mainMod, C, exec, hyprpicker -anr
