--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -2,6 +2,7 @@ font_family JetBrainsMono Nerd Font
 cursor_trail 3
 linux_display_server wayland
 confirm_os_window_close 0
+# window_padding_width 1
 # background_opacity 0.9
 
 # The basic colors
